err/elastictrace.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/elastictrace'...
Compiling './lib/python3.5/site-packages/elastictrace/agent.py'...
***   File "./lib/python3.5/site-packages/elastictrace/agent.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elastictrace/lib'...
Compiling './lib/python3.5/site-packages/elastictrace/lib/mem_stat.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (mem_stat.py, line 36)
Listing './lib/python3.5/site-packages/elastictrace/lib/queuelib'...
Compiling './lib/python3.5/site-packages/elastictrace/lib/tail.py'...
***   File "./lib/python3.5/site-packages/elastictrace/lib/tail.py", line 129
    print str(dump)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elastictrace/plugin'...
Compiling './lib/python3.5/site-packages/elastictrace/plugin/helloworld.py'...
***   File "./lib/python3.5/site-packages/elastictrace/plugin/helloworld.py", line 26
    print helloworld.old
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/elastictrace/plugin/memcached.py'...
***   File "./lib/python3.5/site-packages/elastictrace/plugin/memcached.py", line 14
    self.regex = re.compile(ur"STAT (.*) (.*)\r")
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elastictrace/plugin/nginx.py'...
***   File "./lib/python3.5/site-packages/elastictrace/plugin/nginx.py", line 56
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elastictrace/plugin/plugin.py'...
***   File "./lib/python3.5/site-packages/elastictrace/plugin/plugin.py", line 80
    print str(self.kwargs['name'] + ": " + logLine)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elastictrace/plugin/system.py'...
***   File "./lib/python3.5/site-packages/elastictrace/plugin/system.py", line 177
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elastictrace-0.4.7.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
